[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Fipps-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/game_logo.png" type="Texture" id=2]
[ext_resource path="res://Menu/Menu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Where_in_the_world.png" type="Texture" id=4]
[ext_resource path="res://Assets/geoguesser_version.png" type="Texture" id=5]
[ext_resource path="res://Menu/Multiplayer.gd" type="Script" id=6]
[ext_resource path="res://Menu/Options.gd" type="Script" id=7]
[ext_resource path="res://Menu/SinglePlayer.gd" type="Script" id=8]
[ext_resource path="res://Assets/Music & Sounds/Music.mp3" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]
Button/colors/font_color = Color( 0.278431, 0.792157, 0.458824, 1 )
Button/colors/font_color_disabled = Color( 0.901961, 0.901961, 0.901961, 0.2 )
Button/colors/font_color_focus = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 2 )
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="Menu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 3 )
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 520.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 512.0
margin_bottom = 440.0

[node name="Title" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 512.0
margin_bottom = 120.0
texture = ExtResource( 4 )

[node name="MenuOptions" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 512.0
margin_bottom = 386.0
size_flags_vertical = 3

[node name="SinglePlayer" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
margin_right = 512.0
margin_bottom = 46.0
focus_neighbour_top = NodePath("../Options")
custom_fonts/font = SubResource( 1 )
text = "Single Player"
script = ExtResource( 8 )

[node name="Multiplayer" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 50.0
margin_right = 512.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 4 )
text = "Multiplayer"
script = ExtResource( 6 )

[node name="Options" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 100.0
margin_right = 512.0
margin_bottom = 146.0
focus_neighbour_bottom = NodePath("../SinglePlayer")
text = "Options"
script = ExtResource( 7 )

[node name="Version" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 390.0
margin_right = 512.0
margin_bottom = 440.0
texture = ExtResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 516.0
margin_right = 772.0
margin_bottom = 440.0

[node name="LeaderBoards" type="TextureRect" parent="MarginContainer/HBoxContainer/CenterContainer"]
margin_top = 45.0
margin_right = 256.0
margin_bottom = 395.0
texture = ExtResource( 2 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/SinglePlayer" to="." method="_on_SinglePlayer_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/Multiplayer" to="." method="_on_Multiplayer_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/Options" to="." method="_on_Options_pressed"]
[connection signal="finished" from="BackgroundMusic" to="." method="_on_BackgroundMusic_finished"]
